2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Reset cursor position to the end when going up in the command
	  history.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Don't rely on Application.Quit(), call Environment.Quit()
	  afterwards to be sure we are quitting.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, EngineManagerDialog.cs, FirstStartDruid.cs,
	  Frontend-GNOME.mdp, EngineDruid.cs, NewEngineDruid.cs: Renamed
	  NewEngineDruid to EngineDruid.
	
	  Implemented edit mode of EngineDruid (closes trac bug #14).
	* SteticPreferencesDialog.cs: Added license header.

2008-07-16  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, Preferences/PreferencesDialog.cs,
	  Chats/GroupChatView.cs, Chats/ChatView.cs, Entry.cs, ChatViewManager.cs:
	  Implemented basic theming support (closes trac bug #19).

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, GnomeUI.cs, ChatViewManager.cs: Failed attempt
	  to fix trac bug #50

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, FindGroupChatDialog.cs,
	  gtk-gui/Smuxi.Frontend.Gnome.FindGroupChatDialog.cs, gtk-gui/gui.stetic:
	  Implemented FindGroupChatDialog (closes trac bug #13).

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Chats/SessionChatView.cs, Chats/PersonChatView.cs, Chats/GroupChatView.cs,
	  Chats/ChatView.cs: Fixed icon / label position on tabs.

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Fixed brace in help output.

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Fixed indention.
	
	  Call Quit() in ShowException, as thats what the message (CrashDialog)
	  says.
	
	  Don't run first start druid anymore.

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Fixed loosing the selection issue when bringing focus back to
	  the input entry.

2008-07-12  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend-GNOME.mdp,