@@ -1,5 +1,10 @@
 2008-07-17  Mirco Bauer <meebey@meebey.net> 
 
+	* Preferences/ServerView.cs: glade3 renamed some widgets because of a
+	  conflict ignoring the fact that it those have different toplevel widgets
+
+2008-07-17  Mirco Bauer <meebey@meebey.net> 
+
 	* Entry.cs: Reset cursor position to the end when going up in the command
 	  history.
 
